[tool.poetry]
name = "maddpg-pettingzoo"
version = "0.1.0"
description = "MADDPG implementation with PettingZoo environments"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
torch = ">=2.0.0,<3.0.0"
numpy = ">=1.20.0,<2.0.0"
pettingzoo = ">=1.22.0,<2.0.0"
matplotlib = ">=3.5.0,<4.0.0"
seaborn = ">=0.12.0,<0.14.0"
tensorboard = ">=2.10.0,<3.0.0"
supersuit = ">=3.7.0,<4.0.0"
gymnasium = ">=0.28.0,<0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "train_maddpg:main"
